fix z-indexing

--- a/src/Components/NoteForm/NoteForm.css
+++ b/src/Components/NoteForm/NoteForm.css
@@ -4,7 +4,7 @@
   bottom: 0rem;
   position: absolute;
   background-color: #303859;
-  z-index: 100;
+  z-index: 30;
 }
 
 .note-form-literal input {
